--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write ."
+    "test": "prettier . --check",
+    "format": "prettier . --write"
   },
   "keywords": [],
   "author": "",
