--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "block-buddies-minecraft",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "prettier . --check",
@@ -12,6 +13,13 @@
   "license": "ISC",
   "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
   "dependencies": {
+    "@devnote-dev/pterojs": "^2.2.2",
+    "@types/node": "^22.10.2",
     "prettier": "^3.4.2"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@devnote-dev/pterojs": "patches/@devnote-dev__pterojs.patch"
+    }
   }
 }
