--- a/.github/workflows/upload-dynmap.yaml
+++ b/.github/workflows/upload-dynmap.yaml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Test
-        uses: ./.github/actions/$test.yaml
+        uses: ./.github/workflows/$test.yaml
 
       - name: SFTP upload
-        uses: ./.github/actions/$sftp-upload.yaml
+        uses: ./.github/workflows/$sftp-upload.yaml
         with:
           uploads: |
             ./dynmap => ./dynmap
